@@ -1,24 +1,23 @@
-/* Zone allocator for physical memory server.
-   Copyright (C) 2003, 2007 Free Software Foundation, Inc.
+/* Fast memory allocator.
+   Copyright (C) 2003, 2007, 2008 Free Software Foundation, Inc.
    Written by Neal H Walfield.
    Modified by Marcus Brinkmann.
 
    This file is part of the GNU Hurd.
 
    The GNU Hurd is free software; you can redistribute it and/or
-   modify it under the terms of the GNU Lesser General Public
-   License as published by the Free Software Foundation; either
-   version 2.1 of the License, or (at your option) any later version.
+   modify it under the terms of the GNU General Public License as
+   published by the Free Software Foundation; either version 3 of the
+   License, or (at your option) any later version.
 
-   The GNU Hurd is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   The GNU Hurd is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-   Lesser General Public License for more details.
+   General Public License for more details.
 
-   You should have received a copy of the GNU Lesser General Public
-   License along with the GNU C Library; if not, write to the Free
-   Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
-   02111-1307 USA.  */
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see
+   <http://www.gnu.org/licenses/>.  */
 
 #if HAVE_CONFIG_H
 #include <config.h>
@@ -214,7 +213,7 @@ zfree (uintptr_t block, uintptr_t size)
    SIZE must be a multiple of the system's minimum page size.  If no
    block of the required size could be allocated, return 0.  */
 uintptr_t
-zalloc (uintptr_t size)
+zalloc_internal (uintptr_t size)
 {
   unsigned int zone_nr;
   struct block *block;
